--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,8 @@
    "emmet.triggerExpansionOnTab": true,
    "[html]": {
       "editor.defaultFormatter": "vscode.html-language-features"
+   },
+   "[css]": {
+      "editor.defaultFormatter": "mblode.pretty-formatter"
    }
 }
