feat(bag):add code to add items in bag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,8 @@
    },
    "[css]": {
       "editor.defaultFormatter": "mblode.pretty-formatter"
+   },
+   "[javascript]": {
+      "editor.defaultFormatter": "mblode.pretty-formatter"
    }
 }
