bug(profiles): troubleshoot app creation profiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,7 @@
    "terminal.integrated.gpuAcceleration": "canvas",
    "editor.defaultFormatter": "ms-python.flake8",
    "[python]": {
-      "editor.defaultFormatter": "ms-python.python"
+      "editor.defaultFormatter": "trunk.io"
    },
    "[django-html]": {
       "editor.defaultFormatter": "esbenp.prettier-vscode"
