--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -18,9 +18,10 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
+    - taplo@0.8.1
     - bandit@1.7.5
     - black@23.9.1
-    - checkov@3.0.37
+    - checkov@3.0.38
     - git-diff-check
     - hadolint@2.12.0
     - isort@5.12.0
