--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.22
 django-allauth==0.41.0
+django-contrib-comments==2.2.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 djlint==1.34.0
